# saidaforceo.ai

./: .env.example  .gitignore  .pre-commit-config.yaml  API_USAGE.md  ARCHITECTURE.md  CHANGELOG.md  CODING_GUIDELINES.md  COMPUTE_CAPABILITIES.md  CONTEXT.md  ENGINE_WORKFLOW.md  FILE_STRUCTURE.md  ML_PIPELINE.md  README.md  SCHEMA_SPEC.md  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 0002_observability.py
examples/: run_analysis.py  run_profile.py  sales.csv  sales_context.md
examples/contexts/: retail_sales_100.md  shipping_operations_1000.md  support_tickets_500.md
examples/datasets/: retail_sales_100.csv  shipping_operations_1000.csv  support_tickets_500.csv
playground/: _env.py  run_analysis.py  run_analysis_ollama.py  run_analysis_openai.py  run_analysis_openai_gui.py
spec_tests/: test_adapters.py  test_agent_ingestion.py  test_analytics_safety.py  test_benchmarking.py  test_cli.py  test_compute_engines.py  test_context_parser.py  test_document_parsers.py  test_engine.py  test_normalizer.py  test_observability_audit.py  test_planner.py  test_playground.py  test_query_flow.py  test_results_builder.py  test_smoke.py  test_summarizer.py
src/saida/: __init__.py  config.py  engine.py  exceptions.py
src/saida.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/saida/adapters/: __init__.py  _helpers.py  csv_adapter.py  excel_adapter.py  json_adapter.py  pandas_adapter.py  sql_adapter.py
src/saida/agent/: agent.py
src/saida/analytics/: engine.py
src/saida/benchmarking/: ci_gate.py  runner.py  scoring.py
src/saida/cli/: main.py
src/saida/compute/: __init__.py
src/saida/compute/duckdb/: __init__.py  engine.py
src/saida/compute/ml/: __init__.py  engine.py
src/saida/compute/stats/: __init__.py  engine.py
src/saida/connectors/: base.py  filesystem.py  gdrive.py  mysql.py  postgres.py
src/saida/context/: __init__.py  parser.py
src/saida/embeddings/: base.py  mock.py  openai_provider.py
src/saida/ingestion/: parsers.py  pipeline.py  profiler.py
src/saida/llm/: __init__.py  base.py  factory.py  mock.py  models.py  ollama.py  openai_provider.py
src/saida/models/: types.py
src/saida/nlp/: __init__.py  normalizer.py
src/saida/orchestration/: langchain_orchestrator.py  router.py
src/saida/planning/: __init__.py  planner.py
src/saida/profiling/: __init__.py  profiler.py
src/saida/reasoning/: __init__.py  summarizer.py
src/saida/results/: __init__.py  builder.py
src/saida/schemas/: __init__.py  models.py
src/saida/semantic/: store.py
src/saida/storage/: control_plane.py  parquet_store.py  schema.py
src/saida/utils/: config.py
test_csv/: rm_williams_sales_port_moresby_q1_2025.csv
