[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saida"
version = "0.1.0"
description = "SAIDA deterministic, measurable intelligence framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "duckdb>=1.1.0",
  "langchain-core>=0.3.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  "pgvector>=0.3.0",
  "pymysql>=1.1.0",
  "google-api-python-client>=2.130.0",
  "google-auth>=2.30.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
saida = "saida.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["spec_tests"]
