[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saida"
version = "0.1.0"
description = "SAIDA deterministic, measurable intelligence framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "duckdb>=1.1.0",
  "langchain-core>=0.3.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  "pgvector>=0.3.0",
  "pymysql>=1.1.0",
  "google-api-python-client>=2.130.0",
  "google-auth>=2.30.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
saida = "saida.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["spec_tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["saida"]

[tool.mypy]
python_version = "3.11"
files = ["src/saida"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
