[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saida"
version = "0.1.0"
description = "SAIDA lightweight deterministic analytics library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.5",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.0",
  "transformers>=4.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
saida = "saida.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["spec_tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["saida"]

[tool.mypy]
python_version = "3.11"
files = ["src/saida"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
